added logic block, while user is not activated
